Migrated load_fpga to using sysfs gpio.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 tshwctl_SOURCES = tshwctl.c fpga.c
 tshwctl_LDFLAGS = -lm
 
-load_fpga_SOURCES = load_fpga-ts4100.c load_fpga.c -o load_fpga gpiolib-fast.c ispvm.c
+load_fpga_SOURCES = load_fpga-ts4100.c load_fpga.c -o load_fpga gpiolib.c ispvm.c
 load_fpga_LDFLAGS = -mcpu=cortex-a9
 
 tszpuctl_SOURCES = tszpuctl.c fpga.c
