src/Makefile.am: Add gpiolib and tszpufifo to deps for tszpuctl tszpuctl: Split out FIFO functions to separate file tszpufifo: Initial commit of ZPU FIFO API

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ tshwctl_LDFLAGS = -lm
 load_fpga_SOURCES = load_fpga-ts4100.c load_fpga.c -o load_fpga gpiolib.c ispvm.c
 load_fpga_LDFLAGS = -mcpu=cortex-a9
 
-tszpuctl_SOURCES = tszpuctl.c fpga.c
+tszpuctl_SOURCES = tszpuctl.c fpga.c tszpufifo.c gpiolib.c
 tszpuctl_LDFLAGS = -mcpu=cortex-a9
 
 tsmicroctl_SOURCES = tsmicroctl.c
