src/Makefile.am: Build and install ts8820ctl ts8820: Added support for TS-8820 baseboard
Added ctl application for TS-8820, communicates to ZPU MUXBUS bridge
to demonstrate basic operation.

TS-8820 SRAM not supported at this time.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,4 +13,8 @@ tszpuctl_CPPFLAGS = -Wall
 tsmicroctl_SOURCES = tsmicroctl.c
 tsmicroctl_CPPFLAGS = -DCTL -Wall
 
-bin_PROGRAMS = tshwctl load_fpga tsmicroctl tszpuctl
+ts8820ctl_SOURCES = tszpufifo.c gpiolib.c fpga.c ts8820ctl.c ts8820.c
+ts8820ctl_LDFLAGS = -mcpu=cortex-a9
+ts8820ctl_CPPFLAGS = -Wall
+
+bin_PROGRAMS = tshwctl load_fpga tsmicroctl tszpuctl ts8820ctl
