configure: Added script/Makefile to build/install process

--- a/configure.ac
+++ b/configure.ac
@@ -28,5 +28,6 @@ AC_TYPE_UINT8_T
 AC_CHECK_FUNCS([strtoull])
 
 AC_CONFIG_FILES([Makefile
-                 src/Makefile])
+                 src/Makefile
+		 script/Makefile])
 AC_OUTPUT
