eval_cmdline: Added framework to parse cmdline options
tshwctl: Parse cmdline baseboard ID and rev to print with info

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 GITCOMMIT:= $(shell git describe --abbrev=12 --dirty --always)
 
-tshwctl_SOURCES = tshwctl.c fpga.c
+tshwctl_SOURCES = tshwctl.c fpga.c eval_cmdline.c
 tshwctl_LDFLAGS = -lm
 tshwctl_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
