--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,4 +18,5 @@ ts8820ctl_SOURCES = tszpufifo.c gpiolib.c fpga.c ts8820ctl.c ts8820.c
 ts8820ctl_LDFLAGS = -mcpu=cortex-a9
 ts8820ctl_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
-bin_PROGRAMS = tshwctl load_fpga tsmicroctl tszpuctl ts8820ctl
+bin_PROGRAMS = tshwctl tsmicroctl tszpuctl ts8820ctl
+noinst_PROGRAMS = load_fpga
