autotools: Add libgpiod/gpiod.h to check, remove math
Also removed -lm library flag to tshwctl as it is not necessary
for building.

--- a/configure.ac
+++ b/configure.ac
@@ -13,10 +13,10 @@ AC_PROG_CC
 
 # Checks for libraries.
 # FIXME: Replace `main' with a function in `-lm':
-AC_CHECK_LIB([m], [main])
+AC_CHECK_LIB([gpiod], [gpiod_line_request_input], [], [AC_MSG_ERROR([libgpiod not found])])
 
 # Checks for header files.
-AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/ioctl.h termios.h unistd.h])
+AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/ioctl.h termios.h unistd.h gpiod.h], [], [AC_MSG_ERROR([Missing required headers/libraries])])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_INLINE
