zpu: rework file layout and naming
Moving forward, all applications will be prefixed with zpu_ while
any included compilation units will not have that. Primarily for
ease of organization and differentiation of file purpose.

Introduces muxbus.c/h. Include files intended to handle MUXBUS
interaction directly from the ZPU.

Introduces ts8820.h. Constants used on the TS-8820 specifically
for use with MUXBUS.

Modifies ts_zpu.h to provide some additional macros to ease
application interaction.

With the introduction/modification of the above, applications that
previously directly had this code in the sources have all of that
removed and are now set up to compile and include the above as
needed.

--- a/src/zpu/Makefile
+++ b/src/zpu/Makefile
@@ -9,11 +9,11 @@ all: zpu_muxbus.bin zpu_demo.bin
 %.o: %.c
 	$(CC) $(CFLAGS) -c $<
 
-zpu_muxbus.bin: zpu_fifo.o zpu_muxbus.o
+zpu_demo.bin: fifo.o strings.o zpu_demo.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ -o $@
 	$(OBJCOPY) -S -O binary $@
 
-zpu_demo.bin: zpu_fifo.o zpu_strings.o zpu_demo.o
+%.bin: fifo.o muxbus.o %.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ -o $@
 	$(OBJCOPY) -S -O binary $@
 
