zpu: zpu_offload_demo: initial commit of files
Demo for the TS-8820-4100 showcasing I/O use of the TS-8820, using
the ZPU to both interact with TS-8820 I/O and communicate over its
FIFO to Linux, and Linux pulling data out and being able to act on
it in various ways.

--- a/src/zpu/Makefile
+++ b/src/zpu/Makefile
@@ -4,7 +4,7 @@ OBJCOPY = zpu-elf-objcopy
 CFLAGS = -abel -Os
 LDFLAGS = -Wl,-relax -Wl,-gc-sections
 
-all: zpu_muxbus.bin zpu_demo.bin
+all: zpu_muxbus.bin zpu_demo.bin zpu_offload_demo.bin
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $<
