src: tszpufifo/ctl: convert to using libgpiod
Signed-off-by: Kris Bahnsen <kris@embeddedTS.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,14 +7,14 @@ load_fpga_SOURCES = load_fpga-ts4100.c load_fpga.c ispvm.c
 load_fpga_LDFLAGS = -mcpu=cortex-a9
 load_fpga_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
-tszpuctl_SOURCES = tszpuctl.c fpga.c tszpufifo.c gpiolib.c
+tszpuctl_SOURCES = tszpuctl.c fpga.c tszpufifo.c
 tszpuctl_LDFLAGS = -mcpu=cortex-a9
 tszpuctl_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
 tsmicroctl_SOURCES = tsmicroctl.c
 tsmicroctl_CPPFLAGS = -DCTL -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
-ts8820ctl_SOURCES = tszpufifo.c gpiolib.c fpga.c ts8820ctl.c ts8820.c
+ts8820ctl_SOURCES = tszpufifo.c fpga.c ts8820ctl.c ts8820.c
 ts8820ctl_LDFLAGS = -mcpu=cortex-a9
 ts8820ctl_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
@@ -22,7 +22,7 @@ tsmuxbusctl_SOURCES = tszpufifo.c gpiolib.c  fpga.c tsmuxbusctl.c
 tsmuxbusctl_LDFLAGS = -mcpu=cortex-a9
 tsmuxbusctl_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
-zpu_offload_demo_lcd_interface_SOURCES = zpu_offload_demo_lcd_interface.c tszpufifo.c gpiolib.c fpga.c
+zpu_offload_demo_lcd_interface_SOURCES = zpu_offload_demo_lcd_interface.c tszpufifo.c fpga.c
 zpu_offload_demo_lcd_interface_LDFLAGS = -mcpu=cortex-a9
 zpu_offload_demo_lcd_interface_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
