src: muxbus: convert ts8820ctl tsmuxbusctl to libgpiod
Signed-off-by: Kris Bahnsen <kris@embeddedTS.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,7 @@ ts8820ctl_SOURCES = tszpufifo.c fpga.c ts8820ctl.c ts8820.c
 ts8820ctl_LDFLAGS = -mcpu=cortex-a9
 ts8820ctl_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
-tsmuxbusctl_SOURCES = tszpufifo.c gpiolib.c  fpga.c tsmuxbusctl.c
+tsmuxbusctl_SOURCES = tszpufifo.c fpga.c tsmuxbusctl.c
 tsmuxbusctl_LDFLAGS = -mcpu=cortex-a9
 tsmuxbusctl_CPPFLAGS = -Wall -DGITCOMMIT="\"${GITCOMMIT}\""
 
